--- a/index.html
+++ b/index.html
@@ -2491,12 +2491,20 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
 <!-- ====================================================== -->
 <!-- 🧠 NOVAK EXPERT MODE — ALL FOUR CRYPTO VISUALIZERS     -->
 <!-- ====================================================== -->
-<details class="novak-collapse" style="margin-top:32px;">
-  <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
+<details class="novak-collapse" style="margin:40px 0;">
+  <summary 
+    style="
+      cursor:pointer; 
+      padding:14px 22px; 
+      border:2px solid #d0d7de; 
+      border-radius:10px; 
+      font-size:20px; 
+      display:inline-block;
+      transition:0.2s;">
     🧠 Expert Mode — Cryptographic Visualizers (Click to Expand)
   </summary>
 
-  <div class="card" style="margin-top:16px; padding:24px;">
+  <div class="card" style="margin-top:18px; padding:26px; font-size:17px; line-height:1.65;">
 
     <h2 class="section-title">Expert Mode</h2>
     <p style="opacity:0.9; font-size:14px;">
