--- a/index.html
+++ b/index.html
@@ -2431,6 +2431,8 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
   </div>
 </details>
 
+</div>  <!-- Just addeded this - MATT -->
+
 <!-- ✅ AI TRANSPARENCY MODE -->
 <div class="card" style="margin:32px 0 40px 0;" id="transparencyCard">
   <h2 class="section-title">AI Transparency Mode</h2>
