--- a/index.html
+++ b/index.html
@@ -1598,6 +1598,8 @@ ${mutated}
   document.getElementById("avalancheOutput").innerText = result;
 }
 
+</script>
+  
 <!-- ===================================================== -->
 <!-- Example Dataset Loader                                 -->
 <!-- ===================================================== -->
