--- a/index.html
+++ b/index.html
@@ -631,6 +631,7 @@ html[data-theme="dark"] .aud-btn.active {
 
       <h3 style="margin-top:26px;">Why It Matters</h3>
       <ul style="margin-left:20px;">
+        <br>
         <li>✔ Stops fraud before it happens</li>
         <li>✔ Stops automation errors before harm occurs</li>
         <li>✔ Blocks corrupted data from executing</li>
@@ -926,12 +927,13 @@ html[data-theme="dark"] .aud-btn.active {
 <!-- ✅ COLLAPSIBLE TEST EXAMPLE — PREMIUM EDITION -->
 <!-- =============================================== -->
 
-<details class="novak-collapse" style="margin-top:32px;">
-  <summary style="cursor:pointer; font-size:18px; padding:12px 0;">
-    🧪 TEST Example — Click to Expand
-  </summary>
+<div class="card" style="margin-top:32px; padding:24px;">
+  <details class="novak-collapse">
+    <summary style="cursor:pointer; font-size:18px; padding:0 0 8px 0;">
+      🧪 TEST Example — Click to Expand
+    </summary>
 
-  <div class="card" style="padding:28px; margin-top:14px;">
+    <div style="padding:4px 0 0 0; margin-top:8px;">
 
     <!-- ================================================= -->
     <!-- Title + BASIC / EXPERT toggle -->
@@ -1048,10 +1050,11 @@ html[data-theme="dark"] .aud-btn.active {
            style="margin-top:14px; padding:14px; background:var(--card);
                   border:1px solid var(--border); font-family:'JetBrains Mono';
                   min-height:80px; white-space:pre-wrap;"></pre>
-    </div>
+      
+    </div> <!-- end TEST inner content -->
+  </details>
+</div> <!-- end TEST Example card -->
 
-  </div>
-</details>
 
 <!-- ======================================================= -->
 <!-- ⭐ NOVAK SHA EDUCATION SUITE — SINGLE EXPANDABLE MODULE -->
