--- a/index.html
+++ b/index.html
@@ -1055,17 +1055,17 @@ html[data-theme="dark"] .aud-btn.active {
   </details>
 </div> <!-- end TEST Example card -->
 
-
 <!-- ======================================================= -->
 <!-- ⭐ NOVAK SHA EDUCATION SUITE — SINGLE EXPANDABLE MODULE -->
 <!-- ======================================================= -->
 
-<details class="novak-collapse" style="margin-top:32px;">
-  <summary style="cursor:pointer; font-size:18px; padding:12px 0;">
-    🔐 NOVAK SHA Knowledge Center — Simple → Deep → Interactive → Technical → Diagrams → NOVAK Use
-  </summary>
+<div class="card" style="margin-top:32px; padding:24px;">
+  <details class="novak-collapse">
+    <summary style="cursor:pointer; font-size:18px; padding:0 0 8px 0;">
+      🔐 NOVAK SHA Knowledge Center — Simple → Deep → Interactive → Technical → Diagrams → NOVAK Use
+    </summary>
 
-  <div class="card" style="padding:26px; margin-top:16px; font-size:16px; line-height:1.6;">
+    <div style="padding:2px 0 0 0; margin-top:10px; font-size:16px; line-height:1.6;">
 
     <!-- =================================================== -->
     <!-- 1. SIMPLE EXPLANATION -->
@@ -1479,8 +1479,9 @@ NOVAK Protocol       | BEFORE action     | Input=Rule=Output match | ✅ YES
   <strong>NOVAK uses SHA to decide what is allowed to happen.</strong>
 </p>
  
-  </div>
-</details>
+    </div> <!-- end SHA inner content -->
+  </details>
+</div> <!-- end SHA Knowledge Center card -->
 
 <!-- ======================================================= -->
 <!-- STYLES for HASH BOXES, META, BUTTONS, WARN STATES -->
