--- a/index.html
+++ b/index.html
@@ -1852,13 +1852,14 @@ async function startAvalanche() {
 <!-- ✅ COLLAPSIBLE EXAMPLE DATASETS (DEFAULT CLOSED) -->
 <!-- =============================================== -->
 
-<details class="novak-collapse" style="margin-top:22px;">
-  <summary style="cursor:pointer; font-size:18px; padding:12px 0;">
-    📂 Example Datasets — Click to Expand
-  </summary>
+<div class="card" style="margin-top:22px; padding:24px;">
+  <details class="novak-collapse">
+    <summary style="cursor:pointer; font-size:18px; padding:0 0 8px 0;">
+      📂 Example Datasets — Click to Expand
+    </summary>
 
-  <div class="card" style="padding:22px; margin-top:12px;">
-    <h3 class="section-title" style="font-size:20px;">Example Datasets</h3>
+    <div style="padding:2px 0 0 0; margin-top:10px;">
+      <h3 class="section-title" style="font-size:20px;">Example Datasets</h3>
 
     <p style="margin-top:6px; font-size:14px;">
       Select a dataset below — it instantly loads into the input below so you can hash it locally.
@@ -1874,8 +1875,7 @@ async function startAvalanche() {
   </div>
 </details>
 
-  
-  <textarea id="novakInput"
+    <textarea id="novakInput"
     placeholder="Example: VA claim, invoice, VIN, contract, JSON, SQL, XML..."
     style="width:100%; height:170px; margin-top:16px; font-family:'JetBrains Mono', monospace;
            font-size:14px; padding:12px;"></textarea>
