--- a/index.html
+++ b/index.html
@@ -2275,6 +2275,90 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
   </details>
 </div>
 
+<!-- ======================================================= -->
+<!-- 🚫 WHY NOVAK MAKES MALWARE & SPYWARE IMPOSSIBLE -->
+<!-- ======================================================= -->
+
+<div class="card" style="margin-top:28px; padding:22px;">
+  <details>
+    <summary style="cursor:pointer; font-size:18px; font-weight:600;">
+      🚫 Why NOVAK Makes Malware & Spyware Impossible
+    </summary>
+
+    <div style="margin-top:14px; line-height:1.6;">
+
+      <h2 style="margin-bottom:10px; font-size:22px;">
+        The End of Antivirus — The Beginning of Proof-Before-Action Security
+      </h2>
+
+      <p>
+        For 40 years, cybersecurity has relied on a <strong>detect-and-react</strong> model:
+      </p>
+
+      <ul style="margin-left:22px; margin-top:10px;">
+        <li>Antivirus scans files <em>after</em> they exist</li>
+        <li>Anti-spyware detects behavior <em>after</em> it runs</li>
+        <li>Firewalls block traffic <em>after</em> it is observed</li>
+        <li>Security teams respond <em>after</em> harm occurs</li>
+      </ul>
+
+      <p style="margin-top:14px; font-weight:600;">
+        This is “post-execution policing.”  
+        NOVAK replaces it with mathematical prevention.
+      </p>
+
+      <h3 style="margin-top:20px;">🔐 NOVAK Forces Proof-Before-Action</h3>
+
+      <p>
+        Nothing — not a file, script, AI model, robot command, driver, or process — can execute unless:
+      </p>
+
+      <ul style="margin-left:22px; margin-top:10px;">
+        <li>The <strong>input is unchanged</strong></li>
+        <li>The <strong>rule is approved</strong></li>
+        <li>The <strong>output matches</strong> expectations</li>
+        <li>The entire chain forms a valid <strong>Execution Identity Receipt (EIR)</strong></li>
+      </ul>
+
+      <p style="margin-top:14px; font-weight:600;">
+        If anything is tampered with — even one bit:
+      </p>
+
+      <ul style="margin-left:22px;">
+        <li>❌ The action is mathematically impossible</li>
+        <li>❌ The system refuses execution instantly</li>
+        <li>❌ Malware never gets a chance to run</li>
+      </ul>
+
+      <h3 style="margin-top:20px;">🚫 This Eliminates Entire Classes of Cyberattacks</h3>
+
+      <p>NOVAK blocks all execution unless it is proven correct.</p>
+
+      <ul style="margin-left:22px; margin-top:10px;">
+        <li>Zero-day malware → blocked</li>
+        <li>Ransomware → blocked</li>
+        <li>Spyware installers → blocked</li>
+        <li>Browser exploits → blocked</li>
+        <li>USB attacks → blocked</li>
+        <li>Memory injection → blocked</li>
+        <li>Polymorphic viruses → blocked</li>
+        <li>Rootkits → blocked</li>
+        <li>AI model tampering → blocked</li>
+        <li>Robot manipulation → blocked</li>
+      </ul>
+
+      <p style="margin-top:16px; font-weight:700;">
+        No antivirus signatures.<br>
+        No heuristics.<br>
+        No monitoring.<br>
+        No guessing.<br><br>
+        <strong>Just math.</strong>
+      </p>
+
+    </div>
+  </details>
+</div>
+  
 <!-- ========================================= -->
 <!-- 💻 HOW NOVAK SURVIVES PACKET SNIFFING     -->
 <!-- ========================================= -->
