--- a/index.html
+++ b/index.html
@@ -552,92 +552,52 @@ html[data-theme="dark"] .aud-btn.active {
     <button id="mobileMenuBtn" onclick="toggleMobileMenu()">☰</button>
   </div>
 
-<!-- ===== Documentation Dropdown Button ===== -->
+<!-- ===== NOVAK Whitepapers & Laws Dropdown ===== -->
 <div class="dropdown">
-  <button class="dropdown-btn" onclick="toggleDocsMenu()">Docs ▼</button>
+  <button class="dropdown-btn" onclick="toggleDocsMenu()">Whitepapers ▼</button>
 
   <div id="docsMenu" class="dropdown-content">
-    <div class="dropdown-header">NOVAK Documentation</div>
 
-    <!-- WHITEPAPERS MASTER SECTION -->
-<div class="dropdown-divider"></div>
-<div class="dropdown-header">Whitepapers</div>
+    <div class="dropdown-header">NOVAK Laws</div>
 
-<!-- Psychology -->
-<a href="whitepapers/psychology/NOVAK_Deterministic_Cognition.pdf" target="_blank">
-  🧠 Psychology — Deterministic Cognition
-</a>
+    <a href="novak-laws/Laws_L0-L15.pdf" target="_blank">📘 Laws L0–L15 (Canonical)</a>
+    <a href="novak-laws/Industry_Addenda_PL-X_PS-X.pdf" target="_blank">📄 Industry Addenda PL-X & PS-X</a>
 
-<!-- Sociology -->
-<a href="whitepapers/sociology/NOVAK_Cryptographic_Social_Order.pdf" target="_blank">
-  🌍 Sociology — Cryptographic Social Order
-</a>
+    <div class="dropdown-divider"></div>
 
-<!-- Law -->
-<a href="whitepapers/law/NOVAK_Deterministic_Legality.pdf" target="_blank">
-  ⚖️ Law — Deterministic Legality
-</a>
 
-<!-- Mathematics -->
-<a href="whitepapers/mathematics/NOVAK_Formal_Cryptographic_Model.pdf" target="_blank">
-  📐 Mathematics — Formal Cryptographic Model
-</a>
+    <div class="dropdown-header">Whitepapers (PAPER 1–11)</div>
 
-<!-- AI Governance -->
-<a href="whitepapers/ai-governance/NOVAK_AI_Correctness_Enforcement.pdf" target="_blank">
-  🤖 AI Governance — Correctness Enforcement
-</a>
+    <a href="whitepapers/psychology/NOVAK_Deterministic_Cognition.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
 
-<!-- Economics -->
-<a href="whitepapers/economics/NOVAK_Economic_Impact.pdf" target="_blank">
-  💵 Economics — Economic Impact
-</a>
+    <a href="whitepapers/sociology/NOVAK_Cryptographic_Social_Order.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
 
-<!-- Civilization -->
-<a href="whitepapers/civilization/NOVAK_Civilization_Scale_Implications.pdf" target="_blank">
-  🏛 Civilization — Scale Implications
-</a>
+    <a href="whitepapers/law/NOVAK_Deterministic_Legality.pdf" target="_blank">⚖️ PAPER 3 — Law</a>
 
-<!-- Forensics -->
-<a href="whitepapers/forensics/NOVAK_Forensics_In_A_No-Incident_World.pdf" target="_blank">
-  🔍 Forensics — No-Incident World
-</a>
+    <a href="whitepapers/mathematics/NOVAK_Formal_Cryptographic_Model.pdf" target="_blank">📐 PAPER 4 — Mathematics & Cryptography</a>
 
-<!-- National Defense -->
-<a href="whitepapers/national-defense/NOVAK_Strategic_Immunity.pdf" target="_blank">
-  🛡 National Defense — Strategic Immunity
-</a>
+    <a href="whitepapers/ai-governance/NOVAK_AI_Correctness_Enforcement.pdf" target="_blank">🤖 PAPER 5 — AI & Autonomous Systems</a>
 
-<!-- Ethics -->
-<a href="whitepapers/ethics/NOVAK_Deterministic_Ethics.pdf" target="_blank">
-  📜 Ethics — Deterministic Ethics
-</a>
+    <a href="whitepapers/economics/NOVAK_Economic_Impact.pdf" target="_blank">💰 PAPER 6 — Economics</a>
 
-<!-- Governance -->
-<a href="whitepapers/governance/NOVAK_Governance_By_Math.pdf" target="_blank">
-  🏛 Governance — Governing by Math
-</a>
+    <a href="whitepapers/civilization/NOVAK_Civilization_Scale_Implications.pdf" target="_blank">🏛 PAPER 7 — Civilization</a>
 
-<!-- NOVAK Laws -->
-<div class="dropdown-divider"></div>
-<div class="dropdown-header">NOVAK Laws</div>
+    <a href="whitepapers/forensics/NOVAK_Forensics_In_A_No-Incident_World.pdf" target="_blank">🔍 PAPER 8 — Forensics</a>
 
-<a href="novak-laws/Laws_L0-L15.pdf" target="_blank">
-  📘 Laws L0–L15 (Canonical)
-</a>
+    <a href="whitepapers/national-defense/NOVAK_Strategic_Immunity.pdf" target="_blank">🛡 PAPER 9 — National Defense</a>
 
-<a href="novak-laws/Industry_Addenda_PL-X_PS-X.pdf" target="_blank">
-  📄 Industry Addenda PL-X & PS-X
-</a>
+    <a href="whitepapers/ethics/NOVAK_Deterministic_Ethics.pdf" target="_blank">📜 PAPER 10 — Ethics & Philosophy</a>
 
-<!-- Core Documentation -->
-<div class="dropdown-divider"></div>
-<div class="dropdown-header">Core Docs</div>
+    <a href="whitepapers/governance/NOVAK_Governance_By_Math.pdf" target="_blank">🏛 PAPER 11 — Governance & Policy</a>
 
-<a href="docs/NOVAK_Architecture.pdf" target="_blank">🏗 NOVAK Architecture</a>
-<a href="docs/NOVAK_LightPaper.pdf" target="_blank">📄 NOVAK LightPaper</a>
-<a href="docs/NOVAK_Executive_Brief.pdf" target="_blank">📘 Executive Brief</a>
-<a href="docs/NOVAK_API_Reference.pdf" target="_blank">📚 API Reference</a>
+    <div class="dropdown-divider"></div>
+
+    <div class="dropdown-header">Core Docs</div>
+
+    <a href="docs/NOVAK_Architecture.pdf" target="_blank">📐 Architecture</a>
+    <a href="docs/NOVAK_LightPaper.pdf" target="_blank">💡 Light Paper</a>
+    <a href="docs/NOVAK_Executive_Brief.pdf" target="_blank">📊 Executive Brief</a>
+    <a href="docs/NOVAK_API_Reference.pdf" target="_blank">🔧 API Reference</a>
 
     <!-- PARTS 1–10 -->
     <a href="docs/Part-1_Executive_summary.md" target="_blank">PART 1 — Executive Summary</a>
