--- a/index.html
+++ b/index.html
@@ -568,27 +568,27 @@ html[data-theme="dark"] .aud-btn.active {
 
     <div class="dropdown-header">Whitepapers (PAPER 1–11)</div>
 
-    <a href="whitepapers/psychology/NOVAK_Deterministic_Cognition.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
+    <a href="whitepapers/psychology/PAPER 1 — PSYCHOLOGY.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
 
-    <a href="whitepapers/sociology/NOVAK_Cryptographic_Social_Order.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
+    <a href="whitepapers/sociology/PAPER 2 — SOCIOLOGY.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
 
-    <a href="whitepapers/law/NOVAK_Deterministic_Legality.pdf" target="_blank">⚖️ PAPER 3 — Law</a>
+    <a href="whitepapers/law/PAPER 3 — LAW.pdf" target="_blank">⚖️ PAPER 3 — Law</a>
 
-    <a href="whitepapers/mathematics/NOVAK_Formal_Cryptographic_Model.pdf" target="_blank">📐 PAPER 4 — Mathematics & Cryptography</a>
+    <a href="whitepapers/mathematics/PAPER 4 — MATHEMATICS & CRYPTOGRAPHY.pdf" target="_blank">📐 PAPER 4 — Mathematics & Cryptography</a>
 
-    <a href="whitepapers/ai-governance/NOVAK_AI_Correctness_Enforcement.pdf" target="_blank">🤖 PAPER 5 — AI & Autonomous Systems</a>
+    <a href="whitepapers/ai-governance/PAPER 5 — AI & AUTONOMOUS SYSTEMS.pdf" target="_blank">🤖 PAPER 5 — AI & Autonomous Systems</a>
 
-    <a href="whitepapers/economics/NOVAK_Economic_Impact.pdf" target="_blank">💰 PAPER 6 — Economics</a>
+    <a href="whitepapers/economics/PAPER 6 — ECONOMICS.pdf" target="_blank">💰 PAPER 6 — Economics</a>
 
-    <a href="whitepapers/civilization/NOVAK_Civilization_Scale_Implications.pdf" target="_blank">🏛 PAPER 7 — Civilization</a>
+    <a href="whitepapers/civilization/PAPER 7 — CIVILIZATION.pdf" target="_blank">🏛 PAPER 7 — Civilization</a>
 
-    <a href="whitepapers/forensics/NOVAK_Forensics_In_A_No-Incident_World.pdf" target="_blank">🔍 PAPER 8 — Forensics</a>
+    <a href="whitepapers/forensics/PAPER 8 — FORENSICS.pdf" target="_blank">🔍 PAPER 8 — Forensics</a>
 
-    <a href="whitepapers/national-defense/NOVAK_Strategic_Immunity.pdf" target="_blank">🛡 PAPER 9 — National Defense</a>
+    <a href="whitepapers/national-defense/PAPER 9 — NATIONAL DEFENSE.pdf" target="_blank">🛡 PAPER 9 — National Defense</a>
 
-    <a href="whitepapers/ethics/NOVAK_Deterministic_Ethics.pdf" target="_blank">📜 PAPER 10 — Ethics & Philosophy</a>
+    <a href="whitepapers/ethics/PAPER 10 — ETHICS & PHILOSOPHY.pdf" target="_blank">📜 PAPER 10 — Ethics & Philosophy</a>
 
-    <a href="whitepapers/governance/NOVAK_Governance_By_Math.pdf" target="_blank">🏛 PAPER 11 — Governance & Policy</a>
+    <a href="whitepapers/governance/PAPER 11 — GOVERNANCE & POLICY.pdf" target="_blank">🏛 PAPER 11 — Governance & Policy</a>
 
     <div class="dropdown-divider"></div>
 
