--- a/index.html
+++ b/index.html
@@ -568,9 +568,9 @@ html[data-theme="dark"] .aud-btn.active {
 
     <div class="dropdown-header">Whitepapers (PAPER 1–11)</div>
 
-    <a href="whitepapers/psychology/PAPER 1 — PSYCHOLOGY.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
+    <a href="whitepapers/psychology/PAPER1PSYCHOLOGY.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
 
-    <a href="whitepapers/sociology/PAPER 2 — SOCIOLOGY.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
+    <a href="whitepapers/sociology/PAPER2SOCIOLOGY.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
 
     <a href="whitepapers/law/PAPER 3 — LAW.pdf" target="_blank">⚖️ PAPER 3 — Law</a>
 
