--- a/index.html
+++ b/index.html
@@ -568,27 +568,27 @@ html[data-theme="dark"] .aud-btn.active {
 
     <div class="dropdown-header">Whitepapers (PAPER 1–11)</div>
 
-    <a href="whitepapers/docs/psychology/PAPER1PSYCHOLOGY.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
+    <a href="docs/psychology/PAPER1PSYCHOLOGY.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
 
-    <a href="whitepapers/docs/sociology/PAPER2SOCIOLOGY.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
+    <a href="ocs/sociology/PAPER2SOCIOLOGY.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
 
-    <a href="whitepapers/docs/law/PAPER 3 — LAW.pdf" target="_blank">⚖️ PAPER 3 — Law</a>
+    <a href="docs/law/PAPER 3 — LAW.pdf" target="_blank">⚖️ PAPER 3 — Law</a>
 
-    <a href="whitepapers/docs/mathematics/PAPER 4 — MATHEMATICS & CRYPTOGRAPHY.pdf" target="_blank">📐 PAPER 4 — Mathematics & Cryptography</a>
+    <a href="ocs/mathematics/PAPER 4 — MATHEMATICS & CRYPTOGRAPHY.pdf" target="_blank">📐 PAPER 4 — Mathematics & Cryptography</a>
 
-    <a href="whitepapers/docs/ai-governance/PAPER 5 — AI & AUTONOMOUS SYSTEMS.pdf" target="_blank">🤖 PAPER 5 — AI & Autonomous Systems</a>
+    <a href="docs/ai-governance/PAPER 5 — AI & AUTONOMOUS SYSTEMS.pdf" target="_blank">🤖 PAPER 5 — AI & Autonomous Systems</a>
 
-    <a href="whitepapers/docs/economics/PAPER 6 — ECONOMICS.pdf" target="_blank">💰 PAPER 6 — Economics</a>
+    <a href="docs/economics/PAPER 6 — ECONOMICS.pdf" target="_blank">💰 PAPER 6 — Economics</a>
 
-    <a href="whitepapers/docs/civilization/PAPER 7 — CIVILIZATION.pdf" target="_blank">🏛 PAPER 7 — Civilization</a>
+    <a href="docs/civilization/PAPER 7 — CIVILIZATION.pdf" target="_blank">🏛 PAPER 7 — Civilization</a>
 
-    <a href="whitepapers/docs/forensics/PAPER 8 — FORENSICS.pdf" target="_blank">🔍 PAPER 8 — Forensics</a>
+    <a href="docs/forensics/PAPER 8 — FORENSICS.pdf" target="_blank">🔍 PAPER 8 — Forensics</a>
 
-    <a href="whitepapers/docs/national-defense/PAPER 9 — NATIONAL DEFENSE.pdf" target="_blank">🛡 PAPER 9 — National Defense</a>
+    <a href="docs/national-defense/PAPER 9 — NATIONAL DEFENSE.pdf" target="_blank">🛡 PAPER 9 — National Defense</a>
 
-    <a href="whitepapers/docs/thics/PAPER 10 — ETHICS & PHILOSOPHY.pdf" target="_blank">📜 PAPER 10 — Ethics & Philosophy</a>
+    <a href="docs/thics/PAPER 10 — ETHICS & PHILOSOPHY.pdf" target="_blank">📜 PAPER 10 — Ethics & Philosophy</a>
 
-    <a href="whitepapers/docs/governance/PAPER 11 — GOVERNANCE & POLICY.pdf" target="_blank">🏛 PAPER 11 — Governance & Policy</a>
+    <a href="docs/governance/PAPER 11 — GOVERNANCE & POLICY.pdf" target="_blank">🏛 PAPER 11 — Governance & Policy</a>
 
     <div class="dropdown-divider"></div>
 
