--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ html[data-theme="dark"] .aud-btn.active {
 
     <div class="dropdown-header">Whitepapers (PAPER 1–11)</div>
 
-    <a href="docs/psychology/PAPER1PSYCHOLOGY.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
+    <a href="docs/psychology/PAPER 1 — PSYCHOLOGY.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
 
     <a href="ocs/sociology/PAPER2SOCIOLOGY.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
 
