--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ html[data-theme="dark"] .aud-btn.active {
 
     <a href="docs/psychology/PAPER 1 — PSYCHOLOGY.pdf" target="_blank">🧠 PAPER 1 — Psychology</a>
 
-    <a href="ocs/sociology/PAPER2SOCIOLOGY.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
+    <a href="ocs/sociology/PAPER 2 — SOCIOLOGY.pdf" target="_blank">🌐 PAPER 2 — Sociology</a>
 
     <a href="docs/law/PAPER 3 — LAW.pdf" target="_blank">⚖️ PAPER 3 — Law</a>
 
