--- a/index.html
+++ b/index.html
@@ -2399,96 +2399,63 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
   </details>
 </div>
 
-<!-- ====================================================== -->
-<!-- 📵 WHAT NOVAK DOES TO ROBOCALLS & TELEMARKETERS        -->
-<!-- ====================================================== -->
-<div id="robocallCard" class="card" style="margin-top:32px; position:relative;">
-  <h2 class="section-title">What NOVAK Does to Robocalls & Telemarketing</h2>
+<!-- DROPDOWN CARD — What NOVAK Does to Robocalls -->
+<div class="dropdown-card">
+    <button class="card-toggle" onclick="toggleCard('robocallDrop')">
+        <span class="icon">📵</span>
+        What NOVAK Does to Robocalls & Telemarketing
+    </button>
 
-  <p>
-    Robocalls exist because today’s phone networks allow actions first and ask 
-    questions later. Caller ID can be spoofed, automation runs without proof, 
-    and unauthorized scripts execute before anyone checks legitimacy.
-  </p>
+    <div id="robocallDrop" class="card-content" style="display:none;">
 
-  <p style="margin-top:12px; font-weight:600;">
-    NOVAK ends this entirely using Proof-Before-Action execution.
-  </p>
+        <div class="info-card">
+            <h3>What NOVAK Does to Robocalls & Telemarketing</h3>
 
-  <h3 style="margin-top:18px;">🚫 Robocalls Cannot Execute</h3>
-  <p>
-    Every attempted call must produce a valid 
-    <strong>Execution Identity Receipt (EIR)</strong>:
-  </p>
+            <p>Robocalls exist because today’s phone networks allow actions first and ask questions later. Caller ID can be spoofed, automation runs without proof, and unauthorized scripts execute before anyone checks legitimacy.</p>
 
-  <ul style="margin-left:20px; margin-top:8px;">
-    <li>Input hash must match the real caller</li>
-    <li>Rule hash must match an allowed calling purpose</li>
-    <li>Output hash must match an approved pattern</li>
-    <li>No spoofing, tampering, or hidden automation is possible</li>
-  </ul>
+            <p>NOVAK ends this entirely using <strong>Proof-Before-Action</strong> execution.</p>
 
-  <p style="margin-top:10px;">
-    If anything fails — even by a single bit — NOVAK mathematically blocks the call 
-    <strong>before it ever rings</strong>.
-  </p>
+            <h4>🚫 Robocalls Cannot Execute</h4>
+            <p>Every attempted call must produce a valid <strong>Execution Identity Receipt (EIR)</strong>:</p>
 
-  <h3 style="margin-top:20px;">🔐 Telemarketing Requires Your Explicit Approval</h3>
-  <p>
-    Marketing, political outreach, surveys, or automated notifications 
-    must prove that:
-  </p>
+            <ul>
+                <li>Input hash must match the real caller</li>
+                <li>Rule hash must match an allowed calling purpose</li>
+                <li>Output hash must match an approved pattern</li>
+                <li>No spoofing, tampering, or hidden automation is possible</li>
+            </ul>
 
-  <ul style="margin-left:20px; margin-top:8px;">
-    <li>You opted in</li>
-    <li>The caller is genuine</li>
-    <li>The category of call is allowed for you</li>
-  </ul>
+            <p>If anything fails — even a single bit — NOVAK blocks the call <strong>before it ever rings</strong>.</p>
 
-  <p style="margin-top:10px;">
-    Without cryptographic permission, the call is rejected by rule. 
-    No exceptions. No loopholes.
-  </p>
+            <h4>🔐 Telemarketing Requires Your Explicit Approval</h4>
+            <p>Marketing, political outreach, surveys, or automated notifications must prove that:</p>
 
-  <h3 style="margin-top:20px;">🛡 Stops All Phone-Based Scams</h3>
-  <p>The following scams simply cannot execute:</p>
+            <ul>
+                <li>You opted in</li>
+                <li>The caller is genuine</li>
+                <li>The category of call is allowed for you</li>
+            </ul>
 
-  <ul style="margin-left:20px; margin-top:8px;">
-    <li>IRS scams</li>
-    <li>Social Security fraud calls</li>
-    <li>Fake Medicare outreach</li>
-    <li>Tech support scams</li>
-    <li>Banking & wire fraud calls</li>
-    <li>AI voice impersonation scams</li>
-    <li>Overseas call-center spoofing</li>
-  </ul>
+            <p>Without cryptographic permission, the call is rejected. No exceptions. No loopholes.</p>
 
-  <p style="margin-top:14px; font-weight:600;">
-    NOVAK does not reject these calls.  
-    <br>It prevents them from existing.
-  </p>
+            <h4>🛑 Stops All Phone-Based Scams</h4>
+            <p>The following scams simply cannot execute:</p>
 
-  <!-- Close X -->
-  <button onclick="document.getElementById('robocallCard').style.display='none'"
-    style="
-      position:absolute;
-      top:14px;
-      right:14px;
-      background:none;
-      border:none;
-      font-size:20px;
-      cursor:pointer;
-    "
-    aria-label="Hide Robocall Card">
-    ✕
-  </button>
+            <ul>
+                <li>IRS scams</li>
+                <li>Social Security fraud calls</li>
+                <li>Fake Medicare outreach</li>
+                <li>Tech support scams</li>
+                <li>Banking & wire fraud calls</li>
+                <li>AI voice impersonation scams</li>
+                <li>Overseas call-center spoofing</li>
+            </ul>
 
-  <!-- Confirm hide -->
-  <button class="action-btn"
-          onclick="document.getElementById('robocallCard').style.display='none'"
-          style="margin-top:20px;">
-    ✅ Got it — Hide
-  </button>
+            <p><strong>NOVAK does not reject these calls.</strong><br>It <strong>prevents them from existing.</strong></p>
+
+        </div><!-- end info-card robocalls -->
+
+    </div>
 </div>
   
 <!-- ========================================= -->
