--- a/index.html
+++ b/index.html
@@ -3931,19 +3931,19 @@ function setAudience(aud) {
       </ul>
     `,
     government: `
-      <h3>What NOVAK Means for Government</h3>
+      <h3>What NOVAK Means for Government</h3><br>
       <p>Mathematical proof-before-action for all automated systems.</p>
     `,
     investor: `
-      <h3>NOVAK for Investors</h3>
+      <h3>NOVAK for Investors</h3><br>
       <p>Integrity infrastructure for all autonomous decision systems.</p>
     `,
     cyber: `
-      <h3>NOVAK for Cybersecurity</h3>
+      <h3>NOVAK for Cybersecurity</h3><br>
       <p>A cryptographic enforcement layer stopping tampering in real time.</p>
     `,
     academic: `
-      <h3>NOVAK for Academics</h3>
+      <h3>NOVAK for Academics</h3><br>
       <p>Formal verification, SHA-based binding, and deterministic execution models.</p>
     `
   };
