--- a/index.html
+++ b/index.html
@@ -3958,12 +3958,7 @@ function setAudience(aud) {
   const messages = {
     public: `
       <h3>What NOVAK Means for the Public</h3><br>
-      <p>NOVAK prevents computers from acting on wrong or changed information.</p><br>
-      <ul>
-        <li>✔ Protects you from automated errors</li>
-        <li>✔ Blocks fraud before it happens</li>
-        <li>✔ Ensures every decision is mathematically verified</li>
-      </ul>
+      <p>NOVAK prevents computers from acting on wrong or changed information.</p>
     `,
     government: `
       <h3>What NOVAK Means for Government</h3><br>
