--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ html[data-theme="dark"] .aud-btn.active {
 
     <a href="docs/law/PAPER 3 — LAW.pdf" target="_blank">⚖️ PAPER 3 — Law</a>
 
-    <a href="ocs/mathematics/PAPER 4 — MATHEMATICS & CRYPTOGRAPHY.pdf" target="_blank">📐 PAPER 4 — Mathematics & Cryptography</a>
+    <a href="docs/mathematics/PAPER 4 — MATHEMATICS & CRYPTOGRAPHY.pdf" target="_blank">📐 PAPER 4 — Mathematics & Cryptography</a>
 
     <a href="docs/ai-governance/PAPER 5 — AI & AUTONOMOUS SYSTEMS.pdf" target="_blank">🤖 PAPER 5 — AI & Autonomous Systems</a>
 
