--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@ html[data-theme="dark"] .aud-btn.active {
 
     <a href="docs/national-defense/PAPER 9 — NATIONAL DEFENSE.pdf" target="_blank">🛡 PAPER 9 — National Defense</a>
 
-    <a href="docs/thics/PAPER 10 — ETHICS & PHILOSOPHY.pdf" target="_blank">📜 PAPER 10 — Ethics & Philosophy</a>
+    <a href="docs/ethics/PAPER 10 — ETHICS & PHILOSOPHY.pdf" target="_blank">📜 PAPER 10 — Ethics & Philosophy</a>
 
     <a href="docs/governance/PAPER 11 — GOVERNANCE & POLICY.pdf" target="_blank">🏛 PAPER 11 — Governance & Policy</a>
 
