--- a/index.html
+++ b/index.html
@@ -2482,6 +2482,70 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
   </div>
 </details>
 </div>
+
+<!-- ====================================================== -->
+<!-- 🪪 IDENTITY THEFT & SYNTHETIC FRAUD PROTECTION -->
+<!-- ====================================================== -->
+<details class="novak-collapse" style="margin-top:28px;">
+  <summary style="cursor:pointer; font-size:20px; padding:14px 0;">
+    🪪 What NOVAK Does to Identity Theft & Synthetic Identity Fraud
+  </summary>
+
+  <div class="card" style="margin-top:16px; font-size:16px; line-height:1.6;">
+
+    <h2 style="margin-top:0;">Why Identity Theft Happens Today</h2>
+    <p>
+      Identity theft and synthetic identity fraud thrive because systems accept 
+      <strong>information without mathematical proof of correctness</strong>.  
+      Criminals assemble identities from stolen SSNs, forged documents, edited PDFs, 
+      or mismatched data that no current system detects before harm occurs.
+    </p>
+
+    <ul style="margin-left:20px; margin-top:12px;">
+      <li>Unauthorized loan applications</li>
+      <li>Credit accounts opened in someone else’s name</li>
+      <li>Benefit fraud using stolen or fake identities</li>
+      <li>Medical identity theft</li>
+      <li>SSN misuse or substitution</li>
+      <li>Synthetic identity construction from partial data</li>
+      <li>Stolen or forged government documents</li>
+    </ul>
+
+    <h3 style="margin-top:24px;">🔐 NOVAK Forces Proof-Before-Action</h3>
+    <p>
+      With NOVAK, no identity-based action can occur unless:
+    </p>
+
+    <ul style="margin-left:20px;">
+      <li>✔ The <strong>input identity data</strong> is unchanged</li>
+      <li>✔ The <strong>rules</strong> for the action are correct (loan, claim, account, etc.)</li>
+      <li>✔ The <strong>output</strong> follows those rules exactly</li>
+      <li>✔ The entire process forms a cryptographically linked <strong>EIR</strong></li>
+    </ul>
+
+    <p style="margin-top:12px;">
+      If the identity data is mismatched, forged, synthetic, or tampered with — 
+      NOVAK refuses the action <strong>before execution</strong>.
+    </p>
+
+    <h3 style="margin-top:24px;">🚫 This Eliminates Entire Classes of Identity Fraud</h3>
+    <ul style="margin-left:20px;">
+      <li>❌ Synthetic identities created from fragments</li>
+      <li>❌ Credit accounts opened under a stolen SSN</li>
+      <li>❌ Fake benefit claims</li>
+      <li>❌ Unauthorized medical billing under another name</li>
+      <li>❌ Fraudulent loan applications</li>
+      <li>❌ Passport / ID document tampering</li>
+      <li>❌ Insider manipulation of identity data</li>
+    </ul>
+
+    <p style="margin-top:16px; font-weight:600;">
+      NOVAK makes identity fraud <strong>mathematically impossible</strong>.  
+      No guessing. No heuristics. Just immutable cryptographic proof.
+    </p>
+
+  </div>
+</details>
   
 <!-- ========================================= -->
 <!-- 💻 HOW NOVAK SURVIVES PACKET SNIFFING     -->
